# agentic-tbd

./: README.md  pyproject.toml  requirements.txt
src/: __init__.py  agent.py  main.py
tests/: __init__.py  test_agent.py
